platform/src/objects/DT_1_2_Object__c.object
<CustomObject>
    <description>Data Table 1_2.</description>
    <fields>
        <fullName>DT_0_0_Object__c</fullName>
        <description>Data Table 0_0 Foreign Key.</description>
        <inlineHelpText>DT_0_0 Object</inlineHelpText>
        <label>DT_0_0 Object</label>
        <referenceTo>DT_0_0_Object__c</referenceTo>
        <relationshipLabel>DT_1_2 Objects</relationshipLabel>
        <relationshipName>DT_1_2_Objects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DT_1_2_Field_A__c</fullName>
        <description>Data Table 1_2 Field A.</description>
        <inlineHelpText>Data Table 1_2 Field A.</inlineHelpText>
        <label>DT_1_2 Field A</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_1_2_Field_B__c</fullName>
        <description>Data Table 1_2 Field B.</description>
        <inlineHelpText>Data Table 1_2 Field B.</inlineHelpText>
        <label>DT_1_2 Field B</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_1_2_Field_C__c</fullName>
        <description>Data Table 1_2 Field C.</description>
        <inlineHelpText>Data Table 1_2 Field C.</inlineHelpText>
        <label>DT_1_2 Field C</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DT_1_2_Field_D__c</fullName>
        <description>Data Table 1_2 Field D.</description>
        <inlineHelpText>Data Table 1_2 Field D.</inlineHelpText>
        <label>DT_1_2 Field D</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>DT_1_2 Object</label>
    <nameField>
        <label>DT_1_2_Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DT_1_2 Objects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>